# CTS

./: .gitignore  CMakeLists.txt
include/: Aggregator.h  TA.h  Tools.h  UAV.h  Verifier.h  brpcTools.h
proto/: Agg.proto  TA.proto  UAV.proto
src/: Aggregator.cpp  TA.cpp  UAV.cpp  Verifier.cpp  fussion.cpp
src/Tools/: Tools.cpp  brpcTools.cpp
test/: startAggregator.cpp  startTA.cpp  startUAV.cpp  startVerifier.cpp
test/batch/: batchStartUAV
